Added img, style fixes

--- a/about.html
+++ b/about.html
@@ -2,4 +2,6 @@
 layout: default
 title: About
 ---
-Hello, I am Alex and this is my blog about experimenting with IT stuff. Here you will find different experiments, from setting up equipment till bug fixing and contributing to open-source. 
+<p>Hello, I am Alex and this is my blog about experimenting with IT stuff. Here you will find different experiments, from setting up equipment till bug fixing and contributing to open-source.</p> 
+
+ <img src="/assets/img/about/workplace.jpg" alt="My workplace"> 
