Corrected meta tags

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
-layout: default
+layout: 404-noindex
 title: 404
 description: Page not found
 ---
-
+You reached the page, which does not exist on the website. Please check the URL in your browser's address bar or contact our support team.
