Changed styling to Bootstrap

--- a/about.html
+++ b/about.html
@@ -2,6 +2,6 @@
 layout: default
 title: About
 ---
-<p>Hello, I am Alex and this is my blog about experimenting with IT stuff. Here you will find different experiments, from setting up equipment till bug fixing and contributing to open-source.</p> 
-
- <img src="/assets/img/about/workplace.jpg" alt="My workplace"> 
+<p>Hello, I am Alex and this is my blog about experimenting with IT stuff. Here you will find many interesting things, from some light topics of Jekyll and performing various operations on Linux, up to HDD data recover and contributing to open-source.</p>
+<p>Welcome!</p>
+ <img src="/assets/img/about/workplace-2020.jpg" alt="My workplace">
